[UPD] Polish pass

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -92,15 +92,15 @@ Once the ability goes through its initial phase, the event **ActivateAbility** g
 
 Numbered nodes explanation:
 
-  1. Wait until the Status.InCinematic tag is added. If added, we'll call OnThrowAborted to abort the ability.
-  2. ActorInfo holds all the information relevant to our Ability System Component. Within this information we can find the avatar, which represents the Actor that actuates over the AbilityComponent.
-  3. EndAbility should be called when we want to terminate the ability and remove all the tags we've added in the controllability phase.
+  1. Waits until the _Status.InCinematic_ tag is added. If added, it calls _OnThrowAborted_ to abort the ability.
+  2. ActorInfo holds all the information relevant to our [Ability System Component](https://docs.unrealengine.com/4.27/en-US/API/Plugins/GameplayAbilities/UAbilitySystemComponent/) (ASC). Within this information we can find the Avatar, which represents the physical Actor that executes abilities.
+  3. _EndAbility_ should be called when we want to terminate the ability and remove all the tags added in the controllability phase.
   4. This node isn't related to the ability system. It simply mutates the camera with certain specified configuration determined by the passed-in _Camera Mode_ class.
-  5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received we'll perform a smooth rotation over Echo's root.
+  5. Similar to the _WaitGameplayTagAdd_ node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received, it performs a smooth rotation over Echo's root.
 
 ### 3. Charging State
 
-Following this, the character will begin to levitate, spawning particles and triggering sounds, for that, this project uses the gameplay cue system. When this happens, Echo reduces their movement speed and starts casting the _Light Dart_.
+Following this, the character begins to levitate, spawning particles and triggering sounds, for that, this project uses the gameplay cue system. When this happens, Echo reduces their movement speed and starts casting the _Light Dart_.
 
 ![Charging state 1]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-3.PNG){: .align-center}
 
@@ -111,11 +111,11 @@ Numbered nodes explanation:
   1. Adds a gameplay-cue to the owner, in this case it starts the orbe charging animation.
   2. Abilities can also define their own internal state and react accordingly when their state is ended through its neighbour node _End Ability State_.
   3. Similar to 1, however this time we are adding a looping cue (looping animation or sound). In the case of this ability, it makes Echo levitate in place while we hold the button.
-  4. As we commented before GameplayEffects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
+  4. As we commented before Gameplay Effects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
   5. Expects the ability activator to provide target data over a target actor special class. In this case it's waiting for the target actor to define the aim vector to throw the _Light Dart_.
   6. Removes a looping cue giving a tag handle. In this case, if we obtain valid data from the target actor, Echo stops levitating.
   7. Waits for the input to be released.
-  8. If the input has been released successfully we the target from the Wait Target Data node gets confirmed, making the _Wait Target Data_ node execute the Valid Data output.
+  8. If the user releases the input, the _Wait Target Data_ node executes the _Valid Data_ output.
 
 ### 3. Throwing the projectile
 
@@ -143,9 +143,10 @@ Using GAS and creating abilities is easy. That's clear. Then... what's the probl
 
 ### The setup
 
-Setting up GAS means hundreds of boilerplate lines of code. Literally hundreds. The system is not really plug-and-play, although some Epic staff have commented recently that they would like to do the setup more user friendly so people can start using the system without spending hours adding boilerplate code.
+Setting up GAS involves writing hundreds of boilerplate lines of code. Literally hundreds. The system is not really plug-and-play, although some Epic staff have recently commented that they would like to do the setup more user friendly so that people can start using the system without spending hours adding initialization code.
 
-Also, multiplayer games require to do pretty specific setups to simply initialise GAS:
+Also, multiplayer games require to do pretty specific setups to simply initialize GAS. For example some games might require adding the component in the PlayerState, while some others in the Character (see _Dave Ratti from Epic's answer to [community questions #5](https://epicgames.ent.box.com/s/m1egifkxv3he3u3xezb9hzbgroxyhx89)_): 
+
 * Plan to add the ability system component in the player state?
   * Be prepared to write hundreds of code in your avatar Actor to use it as a replication proxy if you don't want to boost the net update frequency of the PlayerState.
   * Understanding the difference between the Owner (actor which has the component) and the Avatar (actor which uses the component) of the Ability System Component is key.
@@ -166,9 +167,9 @@ One of the main intents of GAS is using it in multiplayer games, and yet Epic ha
 
 ## But once it's setup...
 
-Once you got around the setup the system is pretty easy to use and intuitive. Your game designers will love it! And extending it is pretty easy.
+Once set up, the system is quite easy to use and intuitive. Game designers will love it! And scaling it up is quite easy.
 
-Like everything else, when it comes to code design, it is just a matter of learning the tools provided by the system and using them properly to solve the different problems you will face:
+Like everything else, when it comes to code design, it is just a matter of learning the tools provided by the system and using them appropriately to solve different problems (see Dan's [GASDocumentation](https://github.com/tranek/GASDocumentation)):
 
 * Creating new tasks
 * Damage Calculations
