[UPD] orbe -> orb

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -108,7 +108,7 @@ Following this, the character begins to levitate, spawning particles and trigger
 
 Numbered nodes explanation:
 
-  1. Adds a gameplay-cue to the owner, in this case it starts the orbe charging animation.
+  1. Adds a gameplay-cue to the owner, in this case it starts the orb charging animation.
   2. Abilities can also define their own internal state and react accordingly when their state is ended through its neighbour node _End Ability State_.
   3. Similar to 1, however this time we are adding a looping cue (looping animation or sound). In the case of this ability, it makes Echo levitate in place while we hold the button.
   4. As we commented before Gameplay Effects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
