[PRO] Little readability improvement

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -82,7 +82,7 @@ In summary, this ability does the following:
 * **Block Abilities with Tag**: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
 * **Activation Blocked Tags**: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
 
-As we can see, the tag system shifts the paradigm towards stateful systems, by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to a long and complicated **if-else** boolean statement chain.
+As we can see, the gameplay tag system shifts the paradigm towards stateful systems by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to a long and complicated **if-else** boolean statement chain.
 
 ### 2. On ability activated
 
