[FIX] Some more typos

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -111,7 +111,7 @@ Numbered nodes explanation:
   1. Adds a gameplay-cue to the owner, in this case it starts the orb charging animation.
   2. Abilities can also define their own internal state and react accordingly when their state is ended through its neighbour node _End Ability State_.
   3. Similar to 1, however this time we are adding a looping cue (looping animation or sound). In the case of this ability, it makes Echo levitate in place while we hold the button.
-  4. As we commented before Gameplay Effects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
+  4. As we commented before, Gameplay Effects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
   5. Expects the ability activator to provide target data over a target actor special class. In this case it's waiting for the target actor to define the aim vector to throw the _Light Dart_.
   6. Removes a looping cue giving a tag handle. In this case, if we obtain valid data from the target actor, Echo stops levitating.
   7. Waits for the input to be released.
@@ -143,7 +143,7 @@ Using GAS and creating abilities is easy. That's clear. Then... what's the probl
 
 ### The setup
 
-Setting up GAS involves writing hundreds of boilerplate lines of code. Literally hundreds. The system is not really plug-and-play, although some Epic staff have recently commented that they would like to do the setup more user friendly so that people can start using the system without spending hours adding initialization code.
+Setting up GAS involves writing hundreds of boilerplate lines of code. Literally hundreds. The system is not really plug-and-play, although some Epic staff have recently commented that they would like to make the setup more user friendly so that people can start using the system without spending hours adding initialization code.
 
 Also, multiplayer games require to do pretty specific setups to simply initialize GAS. For example some games might require adding the component in the PlayerState, while some others in the Character (see _Dave Ratti from Epic's answer to [community questions #5](https://epicgames.ent.box.com/s/m1egifkxv3he3u3xezb9hzbgroxyhx89)_): 
 
@@ -157,7 +157,7 @@ Also, multiplayer games require to do pretty specific setups to simply initializ
 
 ### Adding attributes and abilities
 
-There is not an standardized way of adding attributes and abilities to your Actors. I've read around ways of doing it... but I feel we are missing a handbook of good practices coming from Epic themselves. Adding and initialising attributes and abilities can get pretty complicated in multiplayer games due to replication and possible data races.
+There is not an standardized way of adding attributes and abilities to your Actors. I've read around ways of doing it... but I feel we are missing a handbook of good practices coming from Epic themselves. Adding and initializing attributes and abilities can get pretty complicated in multiplayer games due to replication and possible data races.
 
 One example I found recently was binding an ability to an input action using the [Enhanced Input](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/) plugin. But really, most of the time you feel like you are work-arounding issues setting up the system to work.
 
