[UPD] Cross-referencing

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -159,7 +159,7 @@ Also, multiplayer games require to do pretty specific setups to simply initializ
 
 There is not an standardized way of adding attributes and abilities to your Actors. I've read around ways of doing it... but I feel we are missing a handbook of good practices coming from Epic themselves. Adding and initializing attributes and abilities can get pretty complicated in multiplayer games due to replication and possible data races.
 
-One example I found recently was binding an ability to an input action using the [Enhanced Input](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/) plugin. But really, most of the time you feel like you are work-arounding issues setting up the system to work.
+One example I found recently was [binding an ability to an input action](https://vorixo.github.io/devtricks/gas-input/) using the [Enhanced Input](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/) plugin. But really, most of the time you feel like you are work-arounding issues setting up the system to work.
 
 ### No multiplayer official examples
 
