[UPD] Typos pass 1

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -17,10 +17,10 @@ In this post we'll see how to employ the [Enhanced Input Plugin](https://docs.un
 
 # Introduction
 
-If you haven't used the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), I really recommend that you do give it a try before reading this article.
+If you haven't used the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), I highly recommend that you do give it a try before reading this article.
 
-This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), so I encourage readers to explore further on how its interface works. However, for the shake of completion I'll highlight here some features from the plugin that are relevant for this post:
-  * **Input Action:** Asset that defines an action in our game and interops with the input system through Input Mapping Contexts.
+This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), so I encourage readers to explore further on how its interface works. However, for the sake of completion I'll highlight here some features from the plugin that are relevant for this post:
+  * **Input Action:** Asset that defines an action in our game and interacts with the input system through Input Mapping Contexts.
   * **BindAction:** Binds an Input Action to a function and returns a handle.
   * **RemoveBindingByHandle:** Removes the binding associated to the passed handle.
 
