[UPD] Updating profile pic and some more typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -26,7 +26,7 @@ This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unreal
 
 # Input binding with GAS
 
-Besides having the Ability System Component in the `PlayerState`, it is common for each [Avatar Actor](https://docs.unrealengine.com/4.26/en-US/API/Plugins/GameplayAbilities/Abilities/FGameplayAbilityActorInfo/AvatarActor/) pawn to have different inputs and skills therefore, the responsibility for binding and granting abilities should belong to the Avatar Pawn itself (or to a component in the Avatar).
+Besides having the Ability System Component in the `PlayerState`, it is common for each [Avatar Actor](https://docs.unrealengine.com/4.26/en-US/API/Plugins/GameplayAbilities/Abilities/FGameplayAbilityActorInfo/AvatarActor/) pawn to have different inputs and skills. Therefore, the responsibility for binding and granting abilities should belong to the Avatar Pawn (or to a component in the Avatar).
 
 Input should be granted always in the local client, however, as we mentioned in our post about [GAS network optimizations](https://vorixo.github.io/devtricks/gas-replication-proxy/), abilities must be granted to our ASC on the server. Avatar Pawns generally grant abilities in the Pawn's server `PossessedBy(AController* NewController)` function, however, they don't reach the local client until the ASC gets a chance to replicate them, as displayed in the following flowchart of `GiveAbility`:
 
