[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -28,15 +28,15 @@ This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unreal
 
 Besides having the Ability System Component in the `PlayerState`, it is common for each [Avatar Actor](https://docs.unrealengine.com/4.26/en-US/API/Plugins/GameplayAbilities/Abilities/FGameplayAbilityActorInfo/AvatarActor/) pawn to have different inputs and skills. Therefore, the responsibility for binding and granting abilities should belong to the Avatar Pawn (or to a component in the Avatar).
 
-Input should be granted always in the local client, however, as we mentioned in our post about [GAS network optimizations](https://vorixo.github.io/devtricks/gas-replication-proxy/), abilities must be granted to our ASC on the server. Avatar Pawns generally grant abilities in the Pawn's server `PossessedBy(AController* NewController)` function, however, they don't reach the local client until the ASC gets a chance to replicate them, as displayed in the following flowchart of `GiveAbility`:
+Input should always be granted in the local client. However, as mentioned in our post about [GAS network optimizations](https://vorixo.github.io/devtricks/gas-replication-proxy/), abilities must be granted to our ASC on the server. Avatar Pawns generally grant abilities in the Pawn's server `PossessedBy(AController* NewController)` function, however, they don't reach the local client until the ASC gets a chance to replicate them, as displayed in the following flowchart of `GiveAbility`:
 
 ![GiveAbility flowchart]({{ '/' | absolute_url }}/assets/images/per-post/gas-input/GiveAbilityFlowChart.PNG){: .align-center}
 
-As we can see above, `OnGiveAbility` is called when the local client receives the ability so, it can start manipulating it locally, and thus, binding them to an InputAction.
+As we can see above, `OnGiveAbility` is called when the local client receives the ability so, it can start manipulating it locally, therefore binding them to an InputAction.
 
 ## Receiving abilities in the client
 
-To bind an ability right when it's recived in the client, we can do the following:
+To bind an ability right when it's received in the client, we can do the following:
   1. Create `IAbilityBindingInterface`.
   2. Override `OnGiveAbility` to call the interface function when the ability is received.
   3. Implement `IAbilityBindingInterface` in every pawn that should bind abilities to input actions.
