[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -147,7 +147,7 @@ public:
 };
 {% endhighlight %}
 
-This `AbilitySet` is employed to grant abilities, and bind input, however, in this post we are only going to focus on the `BindAbility` and `UnbindAbility` functions called in the `IAbilityBindingInterface` interface functions implementation in our pawns.
+This `AbilitySet` is employed to grant abilities, and bind input, however, in this post we are only going to focus on the `BindAbility` and `UnbindAbility` functions called in the `IAbilityBindingInterface` functions implementation in our pawns.
 
 Following next, we provide the implementation of both relevant methods:
 {% highlight c++ %}
@@ -171,7 +171,7 @@ void UAsset_GameplayAbility::UnbindAbility(UAbilityInputBindingComponent* InputC
 	InputComponent->ClearInputBinding(Spec);
 }
 {% endhighlight %}
-As we can see `FGameplayAbilitySpec` contains information about the ability class, which is all we need to resolve the mapping in the client. The next Section showcases how the input component handle the Ability Binding internally to interop with the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/).
+As we can see `FGameplayAbilitySpec` contains information about the ability class, which is all we need to resolve the mapping in the client. The next Section showcases how the input component handles the Ability Binding internally to interact with the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/).
 
 ## Input component
 
