[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -311,16 +311,16 @@ Which can be summarised in the following steps:
   2. Remove the Handle from the bound abilities array from the Ability binding map.
   3. If an entry of our map ends up with 0 bound abilities, we remove said entry of the map.
 
-And with that, you should have a working Input system! 
+And with that, you should have a working Input system!
 
-I really encourage all my readers to take a look at the custom `InputComponent` implementation in the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) by Epic Games, since this article was heavily inspired by how they deal with input in that project.
+I encourage all my readers to take a look at the custom `InputComponent` implementation in the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) by Epic Games, since this article was heavily inspired by how they deal with input in that project.
 
 # Some tips
 
-Well... that was it from my side! I hope you learned something with this article! 
+Well... that was it from my side! I hope you learned something with this article!
 
 Feel free to ask any question or provide feedback for these posts, you can find me on [twitter](https://twitter.com/vorixo), DM's are open! And by the way, there are more articles to come! I won't spoil anything this time, but you guys will probably **predict** what it will be about!
 
-Again, please... let me know if I forgot something! It's a lot of code and information, I totally might have.
+Please let me know if I have forgotten something, there's a substantial amount of code and information and I may have overlooked something.
 
 Enjoy, vori.
