[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -19,7 +19,7 @@ In this post we'll see how to employ the [Enhanced Input Plugin](https://docs.un
 
 If you haven't used the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), I highly recommend that you do give it a try before reading this article.
 
-This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), so I encourage readers to explore further on how its interface works. However, for the sake of completion I'll highlight here some features from the plugin that are relevant for this post:
+This post isn't a tutorial about the [Enhanced Input Plugin](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/), so I encourage readers to explore further on how its interface works. However, for the sake of completion I'll highlight various features from the Plugin that are relevant for this post:
   * **Input Action:** Asset that defines an action in our game and interacts with the input system through Input Mapping Contexts.
   * **BindAction:** Binds an Input Action to a function and returns a handle.
   * **RemoveBindingByHandle:** Removes the binding associated to the passed handle.
@@ -32,7 +32,7 @@ Input should always be granted in the local client. However, as mentioned in our
 
 ![GiveAbility flowchart]({{ '/' | absolute_url }}/assets/images/per-post/gas-input/GiveAbilityFlowChart.PNG){: .align-center}
 
-As we can see above, `OnGiveAbility` is called when the local client receives the ability so, it can start manipulating it locally, therefore binding them to an InputAction.
+As we can see above, `OnGiveAbility` is called when the local client receives the ability to start manipulating it locally, therefore binding them to an InputAction.
 
 ## Receiving abilities in the client
 
@@ -147,7 +147,7 @@ public:
 };
 {% endhighlight %}
 
-This `AbilitySet` is employed to grant abilities, and bind input, however, in this post we are only going to focus on the `BindAbility` and `UnbindAbility` functions called in the `IAbilityBindingInterface` functions implementation in our pawns.
+This `AbilitySet` is employed to grant abilities and bind input, however, in this post we are only going to focus on the `BindAbility` and `UnbindAbility` functions called in the `IAbilityBindingInterface` functions implementation in our pawns.
 
 Following next, we provide the implementation of both relevant methods:
 {% highlight c++ %}
@@ -219,7 +219,7 @@ Binding an Ability can be decomposed in the following steps:
   2. Store the InputAction and the `AbilitySpec` Handle in the `AbilityInputBinding` map.
   3. Bind the press and release actions and store the handles in the current map entry.
 
-Both, the pressed event and the released event are hooked to two functions also present in the Input Component:
+The pressed and the released event are hooked to two functions also present in the Input Component:
 
 {% highlight c++ %}
 void UAbilityInputBindingComponent::OnAbilityInputPressed(UInputAction* InputAction)
@@ -307,7 +307,7 @@ void UAbilityInputBindingComponent::ClearInputBinding(FGameplayAbilitySpec& Abil
 {% endhighlight %}
 
 Which can be summarised in the following steps:
-  1. Find all the entries that should be removed
+  1. Find all the entries that should be removed.
   2. Remove the Handle from the bound abilities array from the Ability binding map.
   3. If an entry of our map ends up with 0 bound abilities, we remove said entry of the map.
 
