[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -315,9 +315,11 @@ And with that, you should have a working Input system!
 
 I encourage all my readers to take a look at the custom `InputComponent` implementation in the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) by Epic Games, since this article was heavily inspired by how they deal with input in that project.
 
-# Some tips
+# Conclusion
 
 Well... that was it from my side! I hope you learned something with this article!
+
+Also! This is not the only way to do Input Binding with GAS, I always recommend to do your own research before blindly following any random internet post, so please, do so!
 
 Feel free to ask any question or provide feedback for these posts, you can find me on [twitter](https://twitter.com/vorixo), DM's are open! And by the way, there are more articles to come! I won't spoil anything this time, but you guys will probably **predict** what it will be about!
 
