[FIX] More typos

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -32,7 +32,7 @@ Input should always be granted in the local client. However, as mentioned in our
 
 ![GiveAbility flowchart]({{ '/' | absolute_url }}/assets/images/per-post/gas-input/GiveAbilityFlowChart.PNG){: .align-center}
 
-As we can see above, `OnGiveAbility` is called when the local client receives the ability to start manipulating it locally, therefore binding them to an InputAction.
+As we can see above, `OnGiveAbility` is called when the local client receives the ability, so wen can start manipulating it locally and therefore binding them to an InputAction.
 
 ## Receiving abilities in the client
 
