[UPD] Adding acknowledgements

--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -83,8 +83,8 @@ Finally, let's implement `IAbilityBindingInterface` in every pawn that should bi
 {% highlight c++ %}
 UCLASS()
 class GAME_API AMyPlayerCharacter : public ACharacter,
-									public IAbilityBindingInterface,
-									...
+				public IAbilityBindingInterface,
+				...
 {
 ...
 
@@ -277,7 +277,7 @@ To unbind abilities the process goes as follows:
 
 {% highlight c++ %}
 void UAbilityInputBindingComponent::ClearInputBinding(FGameplayAbilitySpec& AbilitySpec)
-{	
+{
 	using namespace AbilityInputBindingComponent_Impl;
 
 	TArray<UInputAction*> InputActionsToClear;
@@ -301,7 +301,7 @@ void UAbilityInputBindingComponent::ClearInputBinding(FGameplayAbilitySpec& Abil
 			}
 		}
 	}
-	
+
 	AbilitySpec.InputID = InvalidInputID;
 }
 {% endhighlight %}
@@ -324,5 +324,7 @@ Also! This is not the only way to do Input Binding with GAS, I always recommend 
 Feel free to ask any question or provide feedback for these posts, you can find me on [twitter](https://twitter.com/vorixo), DM's are open! And by the way, there are more articles to come! I won't spoil anything this time, but you guys will probably **predict** what it will be about!
 
 Please let me know if I have forgotten something, there's a substantial amount of code and information and I may have overlooked something.
+
+As a final remark, I would like to highlight the invaluable work my friend Mirror did proofreading this article. If you are interested in literature and art, go support [her stuff](https://twitter.com/HideousMirror)!
 
 Enjoy, vori.
