[UPD] Three more thumbnails

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -1,7 +1,9 @@
 ---
 layout: single
 title: "Unreal Engine 5 - The truth of the Gameplay Ability System"
-excerpt: Demystifying the Gameplay Ability System
+excerpt: Demystifying the Gameplay Ability System.
+header:
+  teaser: /assets/images/per-post/gas/thumb.jpg
 author: Meta
 category: Videogames Development
 tags:
