--- a/_posts/2022-03-01-gas-input.md
+++ b/_posts/2022-03-01-gas-input.md
@@ -1,7 +1,9 @@
 ---
 layout: single
 title: "Gameplay Ability System - Enhanced Input Plugin for Multiplayer Games"
-excerpt: Key remapping ready to use for your multiplayer games using GAS
+excerpt: Key remapping ready to use for your multiplayer games using GAS.
+header:
+  teaser: /assets/images/per-post/gas-input/thumb.jpg
 author: Meta
 category: Videogames Development
 tags:
