[UPD] 2 more thumbnails and a fix·

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -2,6 +2,8 @@
 layout: single
 title: Devtricks, your UE4 site!
 excerpt: What is this site?
+header:
+  teaser: /assets/images/per-post/welcome/thumb.jpg
 author: Meta
 categories:
   - General
