[FIX] Grammar fix

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -72,7 +72,7 @@ This project was great to introduce **Unreal Engine 4** to some people I worked 
 
 ### ShooterGame extension (SGE)
 
-[ShooterGame](https://docs.unrealengine.com/en-us/Resources/SampleGames/ShooterGame){:target="_blank"} is a very great project **Epic Games** has available as a learning resource for Unreal Engine 4. In 2016 I started SGE, which adds a whole bundle of features to ShooterGame to extends its purpose. 
+[ShooterGame](https://docs.unrealengine.com/en-us/Resources/SampleGames/ShooterGame){:target="_blank"} is a very great project **Epic Games** has available as a learning resource for Unreal Engine 4. In 2016 I started SGE, which adds a whole bundle of features to ShooterGame to extend its purpose. 
 
 What can we find on SGE:
 
