[UPD] GAS Fixes

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -139,9 +139,11 @@ And that's about it. The graph has more to it, but this is the essence of the im
 
 As you can see, implementing an ability isn't that complicated once you grasp the basic GAS concepts. There are more advanced concepts such as **Stacking** or **Ability costs**, but these are simply additional features to make your life easier. If you want to learn about them, take a look at the resources Section at the bottom of this article!
 
-### Lyra: The Multiplayer official example
+### Lyra: A GAS Multiplayer official example
 
-With the release of Unreal Engine 5.0 Epic release [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/), an official multiplayer feature-complete example that we can look at and learn good practices about GAS. Lyra is a great and modular sample project using the most robust techniques already explored in Fortnite.
+With the release of Unreal Engine 5.0 Epic release [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/), an official multiplayer feature-complete example that we can look at and learn good practices about GAS. Lyra is a great and modular sample project using the most robust techniques already explored in Fortnite. Learn more about it here:
+
+<iframe width="480" height="270" src="https://www.youtube.com/embed/Fj1zCsYydD8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 ## The cons: Not so plug-and-play
 
