[UPD] More fixes to updated article

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -141,7 +141,7 @@ As you can see, implementing an ability isn't that complicated once you grasp th
 
 ### Lyra: A GAS Multiplayer official example
 
-With the release of Unreal Engine 5.0 Epic release [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/), an official multiplayer feature-complete example that we can look at and learn good practices about GAS. Lyra is a great and modular sample project using the most robust techniques already explored in Fortnite. Learn more about it here:
+With the release of Unreal Engine 5.0 Epic released [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/), an official multiplayer feature-complete example that we can look at and learn good practices about GAS. Lyra is a modular sample project using techniques already explored in Fortnite. Learn more about it here:
 
 <iframe width="480" height="270" src="https://www.youtube.com/embed/Fj1zCsYydD8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
