--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -20,7 +20,7 @@ If we talk about trending engines, we have to talk about [Unreal Engine 5](https
 
 This brand new version of Unreal includes a number of features that _enhance_ the experience of working with the engine. Such as [Nanite](https://docs.unrealengine.com/5.0/en-US/RenderingFeatures/Nanite/), which with an avant-garde application of **virtualized geometry** technology, can allow for taking significant shortcuts when creating game-ready photorealistic assets.
 
-However, these new goodies shall present developers with new challenges. For example, in Nanite we get presented with the following difficultes:
+However, these new goodies shall present developers with new challenges. For example, in Nanite we get presented with the following difficulties:
   * Where to use it: Static opaque non-deformable geometry. Better explained in this [list](https://docs.unrealengine.com/5.0/en-US/RenderingFeatures/Nanite/#supportedfeaturesofnanite).
   * Size: Compressed Nanite meshes often take more disk space than normal low-poly meshes. 
   * [Overdraw](https://youtu.be/xUUSsXswyZM?t=791): Dense overlapping geometry can cause performance issues.
@@ -28,7 +28,7 @@ However, these new goodies shall present developers with new challenges. For exa
 
 Most of these tools entail a shift in the way the industry approaches traditional problems. With Nanite, artists no longer need to go through the tedious retopology phase, which implies a reduction in the production cost for the development of photorealistic assets, as the length of the workflow, and thus the hours required for an asset to be considered game-ready have been considerably reduced.
 
-The industry will of course adapt these changes. So instead disregarding them because - "I'm so used to the old workflows and I don't care" - we should always be down to explore new technology and study the new challenges as they come to keep ourselves up to date and, of course, relevant to the industry.
+The industry will of course adopt these changes. So instead of disregarding them because - "I'm so used to the old workflows and I don't care" - we should always be down to explore new technology and study the new challenges as they come to keep ourselves up to date and, of course, relevant to the industry.
 
 # The Gameplay Ability System (GAS)
 
